--- a/components/card/index.html
+++ b/components/card/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!--Card list--->
+  <div>
     <div class="product-card">
     <div class="img" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
 
@@ -28,6 +31,50 @@
         Add To Card
       </button>
     </footer>
+</div>
 
+
+
+<!--Footer--->
+
+<div>
+  <footer  class="products-footer">
+
+  <nav class="fo-pagination">
+
+<a href="#" class="page previous"></a>
+
+<ul class="page-list" >
+
+  <li><a href="#"  class="page active">1</a></li>
+
+  <li><a href="#"  class="page">2</a></li>
+
+  <li><a href="#"  class="page">3</a></li>
+
+  <li><a href="#"  class="page">4</a></li>
+
+  <li><a href="#"  class="page">5</a></li>
+
+  <li><a href="#"  class="page">6</a></li>
+
+  <li><a href="#"  class="page">7</a></li>
+
+  <li><a href="#"  class="page">8</a></li>
+
+  <li><a href="#"  class="page">9</a></li>
+
+  <li><a href="#"  class="page">10</a></li>
+
+  <li><a href="#"  class="page">11</a></li>
+
+  <li><a href="#"  class="page">12</a></li>
+</ul>
+
+<a href="#" class="page next" ></a>
+    </nav>
+  </footer>
+
+</div>
 </body>
 </html>
