--- a/components/card/style.css
+++ b/components/card/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #f9f9f9;
   font-family: Montserrat, sans-serif;
   margin: 0;
+  font-size: 14px;
 }
 
 p {
@@ -129,4 +130,52 @@ p {
 .product-title {
   font-size: 1rem;
   margin-bottom: 8px;
+}
+/*Footer*/
+.products-footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.fo-pagination {
+  align-items: center;
+  display: flex;
+}
+
+.fo-pagination .page {
+  align-items: center;
+  background-color: #ededed;
+  border-radius: 20px;
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  transition: .3s;
+  width: 40px;
+}
+
+.fo-pagination .previous {
+  margin-right: 15px;
+}
+
+.fo-pagination .next {
+  margin-left: 15px;
+}
+
+.fo-pagination a {
+  line-height: 1;
+  text-decoration: none;
+}
+
+.fo-pagination .page-list {
+  border-radius: 20px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.fo-pagination .page.active,  .page:hover {
+  background-color: #7e72f2;
+  color: #fff;
 }
