--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,18 +4,34 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+
+        <ul class="pagination_box">
+
+          <li class="page-box page-previous"> <i class="bi bi-chevron-left"></i> </li>
+          <li class="page-box page-number">1</li>
+          <li class="page-box page-number">2</li>
+          <li class="page-box page-number">3</li>
+          <li class="page-box page-number">4</li>
+          <li class="page-box page-number">5</li>
+          <li class="page-box page-number">6</li>
+          <li class="page-box page-number">7</li>
+          <li class="page-box page-number">8</li>
+          <li class="page-box page-number">9</li>
+          <li class="page-box page-number">10</li>
+          <li class="page-box page-number">11</li>
+          <li class="page-box page-number">12</li>
+          <li class="page-box page-next"> <i class="bi bi-chevron-right"></i> </li>
+
+        </ul>
+
   </div>
 </main>
 
