--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   --white-color:#fff;
   --black-color:#000;
   --text-color:#2C2C2C;
+  --background-grey:#EDEDED;
 }
 /*shop card CSS*/
 a,p{
@@ -73,6 +74,36 @@ a,p{
   border:0;
   width: 100%;
   padding: 0.65rem 0;
+}
+/*pagination styles*/
+.wrapper{
+  margin: 100px auto;
+  width: 790px;
+}
+.pagination{
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.pagination-element{
+  display: flex;
+  font-size: 10px;
+  border-radius: 50%;
+  background: var(--background-grey);
+  height: 40px;
+  width: 40px;
+  align-items: center;
+  justify-content: center;
 
+}
+.pagination>li:first-child,.pagination>li:last-child{
+  margin:1rem;
+}
 
+.pagination-element:hover, .pagination>.active{
+  background: var(--main-color);
+  color: var(--white-color);
 }
