--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,16 +5,26 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
+    <img src="./Rectangle.png" alt="image" class="top-image">
+
+
+      <div class="top-center">
+        <div class="star">
+          <button class="bottom-star"> <img src="./Star 1.png" alt="star" class="star-img"> 1.23</button>
+
+      </div>
+        <div class="top-center-text">1599</div>
+      </div>
+      <div class="top-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black </div>
+      <div class="top-title-img">laptop</div>
+
+    <div class="bottom">
+      <button class="bottom-button">ADD TO CART</button>
+    </div>
     <!-- Card component -->
   </div>
 </main>
