add variables & icon font

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -23,7 +23,7 @@
         <div class="product-card__wrapper">
           <div class="product-card__rating">
             <div class="product-card__rating-count">1.23</div>
-            <img src="icon/star.svg" alt="star" class="product-card__star">
+            <i class="icon-star"></i>
           </div>
           <div class="product-card__price">15999</div>
         </div>
