--- a/components/card/sass/blocks/_product-card.scss
+++ b/components/card/sass/blocks/_product-card.scss
@@ -29,7 +29,7 @@
     font-size: 13px;
     line-height: 14px;
     color: #FFFFFF;
-    background: #7E72F2;
+    background: $main-color;
     border-radius: 3px;
   }
   &__title {
