--- a/components/card/index.html
+++ b/components/card/index.html
@@ -12,8 +12,9 @@
         <div class="product_wrapper">
           <div class="description_wrapper">
             <div class="product_rating">
-              <span class="star">1.23</span>
-              <img src="./img/star.png" alt="star" />
+              <div class="rating">1.23</div>
+    
+              <i class="bi bi-star"></i>
             </div>
             <div class="product_price">15999</div>
           </div>
