--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
@@ -14,6 +15,7 @@
 
 body {
   height: 100%;
+  min-height: 1200px;
   background: #f9f9f9;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
@@ -45,8 +47,8 @@ body {
 .product_rating {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  max-width: 70px;
+  justify-content: space-between;
+  min-width: 70px;
   color: var(--secondary-color);
   background: var(--third-color);
   padding: 6px 12px;
