--- a/components/card/index.html
+++ b/components/card/index.html
@@ -28,6 +28,54 @@
       </div>
     </div>
   </main>
+
+  <nav class="dotted">
+    <a href="#" class="prev__button btn">
+      <img src="./img/prev__button.png" alt="">
+    </a>
+    <ul class="dotted__list">
+      <li>
+        <a href="#" class="dotted__link dotted__link_click btn">1</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">2</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">3</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">4</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">5</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">6</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">7</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">8</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">9</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">10</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">11</a>
+      </li>
+      <li>
+        <a href="#" class="dotted__link btn">12</a>
+      </li>
+    </ul>
+    <a href="#" class="next__button btn">
+      <img src="./img/next__button.png" alt="">
+    </a>
+  </nav>
+
 </body>
 
 </html>
