--- a/components/card/style.css
+++ b/components/card/style.css
@@ -47,19 +47,139 @@ table {
 body{
     font-family: 'Montserrat', sans-serif;
 }
+header{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 95px;
+    margin:0 auto;
+    height: 83px;
+}
 .wrapper {
     width:1450px;
     border:1px solid #000;
     margin:0 auto;
 }
+.logo>a{
+    color:#7E72F2;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 16px;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration:none;
+}
+.basket{
+    background: #7E72F2;
+    width:120px;
+    height:36px;
+    color:#ffffff;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius:3px;
+}
+
 .container {
     display:flex;
     justify-content:space-between;
+    box-sizing: border-box;
+    width: 1450px;
+    padding:0px 95px 24px 
+}
+.container_left{
+    width:280px;
+    margin:0 20px 0 0;
+}
+.container_filters{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    padding:25px 20px;
+    border-radius: 8px;
+}
+input[type="checkbox"]{
+    display:none;
+}
+.sort{
+    border-bottom:1px solid #D6D6D6;
+    padding:0 0 21px 0;
+    margin-bottom:24px;
+}
+.container_filters label{
+    padding:0 0 0 34px;
+    margin:0 0 10px 0;
+    position:relative;
+    color:#2C2C2C;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    font-family: 'Montserrat', sans-serif;
+    cursor:pointer
+}
+h2{
+    color:#000000;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    font-family: 'Montserrat', sans-serif;
+    margin:0px 0 24px
+}
+.container_filters form{
+    margin:0 0 10px 0;
+    position:relative;
+}
+.container_filters svg{
+    position: absolute;
+    top:5px;
+    left:5px;
+    pointer-events:none;
+    display: none;
+}
+.container_filters label::before{
+    content:"";
+    width:20px;
+    height:17px;
+    box-shadow: inset 0 0 0 1px #979797;
+    position: absolute;
+    top:0px;
+    left: 0;
+    border-radius:4px;
+
+}
+.container_filters input[type="checkbox"]:checked+label+svg{
+    display:block;
+}
+.container_filters input[type="checkbox"]:checked+label:before{
+    background: #7E72F2;
+    box-shadow:none;
+}
+
+.container_left>button{
+    height:46px;
+    text-align:center;
+    background:#7E72F2;
+    border-radius: 8px;
+    width:100%;
+    border: none;
+    color:white;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 12px;
+    font-family: 'Montserrat', sans-serif;
+    cursor:pointer;
+    text-transform:uppercase;
 }
 .container_right{
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items:flex-end;
     justify-content: space-between;
 }
 
@@ -69,25 +189,49 @@ body{
     height:45px;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-    border-radius: 8px;
+    border-radius: 10px;
+    overflow: hidden;
     margin:0 0 20px 0;
 }
-.container_search>svg{
+.container_search>form{
+    width:100%;
+    height: 100%;
+}
+.container_search input[type="text"]{
+    border:none;
+    outline:none;
+    width:100%;
+    height:100%;
+    padding:0 0 0 30px
+}
+.container_search svg{
     position: absolute;
     top:50%;
     right:0;
     transform: translate(-100%,-50%);
+    cursor:pointer;
 }
 .container_shop {
-    margin:0 auto;
+    display:flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap-reverse;
+    width:990px;
+    justify-content: space-between;
 }
 .product {
+    margin:20px 0 0;
     Width:317px;
     padding:12px 0 0 0;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
     border-radius: 8px;
     overflow:hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.product:nth-child(3n+2){
+    margin:20px 0 0;
 }
 .img {
     width:293px;
@@ -116,6 +260,7 @@ body{
     padding:0 11px;
     border-radius: 3px;
     font-family: 'Montserrat', sans-serif;
+    cursor:pointer;
 }
 .info_grade form{
     position:relative;
@@ -151,6 +296,7 @@ body{
     line-height: 12px;
     color:#2C2C2C;
 }
+
 .buy>button{
     width:100%;
     height:40px;
@@ -162,6 +308,7 @@ body{
     font-size: 12px;
     line-height: 12px;
     font-family: 'Montserrat', sans-serif;
+    cursor:pointer;
 }
 .container_corausel{
     padding:20px;
@@ -183,6 +330,7 @@ body{
     justify-content: center;
     align-items: center;
     color:#2C2C2C;
+    cursor:pointer;
 }
 .next:hover, .back:hover{
     background:#7E72F2
