Add pagination (Sergio)

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+<html lang="En">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bychkovyak Sergio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
+  <div class="Pagination-list">
+      <ul class="page-list">
+        <li class="page-item-left">
+            <i class="bi bi-chevron-left"></i>
+          </a>
+        </li>
+          <li class="page-item active">1</a></li>
+          <li class="page-item">2</a></li>
+          <li class="page-item">3</a></li>
+          <li class="page-item">4</a></li>
+          <li class="page-item">4</a></li>
+          <li class="page-item">6</a></li>
+          <li class="page-item">7</a></li>
+          <li class="page-item">8</a></li>
+          <li class="page-item">9</a></li>
+          <li class="page-item">10</a></li>
+          <li class="page-item">11</a></li>
+          <li class="page-item">12</a></li>
+          <li class="page-item-right">
+            <i class="bi bi-chevron-right"></i>
+          </a>
+        </li>
+      </ul>
   </div>
-</main>
-
 </body>
 </html>
