--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,18 +4,33 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="Chevron-left"><button class="Border-off"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+    </svg></button></div>
+
+      <div class="Buttons-box">
+        <button class="Buttons"> 1</button>
+        <button class="Buttons"> 2</button>
+        <button class="Buttons"> 3</button>
+        <button class="Buttons"> 4</button>
+        <button class="Buttons"> 5</button>
+        <button class="Buttons"> 6</button>
+        <button class="Buttons"> 7</button>
+        <button class="Buttons"> 8</button>
+        <button class="Buttons"> 9</button>
+        <button class="Buttons">10</button>
+        <button class="Buttons">11</button>
+        <button class="Buttons">12</button>
+      </div>
+
+    <div class="Chevron-right"> <button class="Border-off"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+    </svg></button></div>
   </div>
 </main>
 
