[HW] Added Pagination - Oleksandr Parada

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
+
 <body>
+  <main>
+    <nav class="os-pagination">
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+      <span class="os-pagination-page-link previous">
+        <i class="bi bi-chevron-left"></i>
+      </span>
 
+      <ul class="os-pagination-page-list">
+        <li class="os-pagination-page-link">1</li>
+        <li class="os-pagination-page-link">2</li>
+        <li class="os-pagination-page-link">3</li>
+        <li class="os-pagination-page-link">4</li>
+        <li class="os-pagination-page-link">5</li>
+        <li class="os-pagination-page-link">6</li>
+        <li class="os-pagination-page-link">7</li>
+        <li class="os-pagination-page-link">8</li>
+        <li class="os-pagination-page-link">9</li>
+        <li class="os-pagination-page-link">10</li>
+        <li class="os-pagination-page-link">11</li>
+        <li class="os-pagination-page-link">12</li>
+      </ul>
+
+      <span class="os-pagination-page-link next">
+        <i class="bi bi-chevron-right"></i>
+      </span>
+
+    </nav>
+  </main>
 </body>
+
 </html>
