--- a/components/card/style.css
+++ b/components/card/style.css
@@ -8,7 +8,6 @@
 
 .middle-frame {
   width: 317px;
-  height: 394px;
   background: #fff;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
@@ -27,6 +26,9 @@
   display: flex;
 margin-bottom: 16px;
 margin-top: 20px;
+justify-content: space-between;
+margin-left: 24px;
+margin-right: 24px;
 }
 
 .button-small {
@@ -36,7 +38,6 @@ margin-top: 20px;
 border-radius: 3px;
 display: flex;
 align-items: center;
-margin-left: 24px;
 }
 
 .rate {
@@ -48,7 +49,7 @@ margin-left: 24px;
 }
 
 .price {
-  margin-left: 155px;
+
   font-family: 'Montserrat';
   font-size: 15px;
 }
@@ -62,7 +63,6 @@ margin-left: 24px;
 .product-category {
   margin-left: 24px;
   margin-top: 10px;
-  margin-bottom: 20px;
   font-size: 10px;
   font-family: 'Montserrat';
 }
