--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
-<body>
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+<body>
+  <main>
+    <div class="wrapper">
+      <div class="pagination">
+        <i class="bi bi-arrow-left pagination-items"></i>
+
+        <a href="#" class="pagination-items item-active">1</a>
+        <a href="#" class="pagination-items">2</a>
+        <a href="#" class="pagination-items">3</a>
+        <a href="#" class="pagination-items">4</a>
+        <a href="#" class="pagination-items">5</a>
+        <a href="#" class="pagination-items">6</a>
+        <a href="#" class="pagination-items">7</a>
+        <a href="#" class="pagination-items">8</a>
+        <a href="#" class="pagination-items">9</a>
+        <a href="#" class="pagination-items">10</a>
+        <a href="#" class="pagination-items">11</a>
+        <a href="#" class="pagination-items">12</a>
+
+        <i class="bi bi-arrow-right pagination-items"></i>
+      </div>
+    </div>
+  </main>
 
 </body>
+
 </html>
