--- a/components/card/index.html
+++ b/components/card/index.html
@@ -9,11 +9,15 @@
     <main class="main">
       <div class="wrapper">
         <div class="elements">
-          <img src="./Rectangle.png" alt="photo computer" class="photo" />
+          <img
+            src="./images/rectangle.png"
+            alt="photo computer"
+            class="photo"
+          />
           <div class="box">
             <button class="stars">
               <span>1.23</span>
-              <img src="./Star 1.png" alt="star" class="star" />
+              <img src="./images/star.png" alt="star" class="star" />
             </button>
             <p class="price">15999</p>
           </div>
