--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -6,6 +6,8 @@ a {
 .wrapper {
   margin: 100px auto;
   border: 1px solid #000000;
+  width: 790px;
+  height: 205px;
 
   display: flex;
   align-items: center;
@@ -15,8 +17,9 @@ a {
 }
 
 .pagination {
-  width: 790px;
-  height: 205px;
+  width: 100%;
+  height: 100%;
+
   display: flex;
   align-items: center;
   justify-content: center;
