--- a/components/card/style.css
+++ b/components/card/style.css
@@ -4,23 +4,30 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-
+}
+:root {
+  --bg-main: #ffffff;
+  --main-color: #7e72f2;
+  --active-color: #5c4eda;
+  --element-bg-color: #ededed;
+  --text-main-color: #2c2c2c;
+  --text-active-color: #ffffff;
 }
 .os-product-card {
+  min-height: 20%;
+  min-width: 20rem;
   height: 24.63rem;
   width: 19.81rem;
   max-width: 25rem;
-  /*max-height: 30rem;*/
-  min-height: 20%;
-  min-width: 20rem;
   box-sizing: border-box;
-  background-color: white;
+  background-color: var(--bg-main);
   border-radius: 0.5rem;
   display: grid;
   grid-template-rows: 1.48fr 1fr 2.5rem;
   overflow: hidden;
   margin: 0 auto;
   margin-top: 0.5rem;
+  cursor: default;
 }
 
 .os-product-img {
@@ -35,10 +42,9 @@ body {
 }
 .img {
   width: 100%;
-  /*background-size: contain;*/
 }
 .os-product-discription {
-  color: #2c2c2c;
+  color: var(--text-main-color);
   box-sizing: border-box;
   margin: 0.75rem;
   padding: 0.75rem 0.75rem;
@@ -57,8 +63,8 @@ body {
   width: 70px;
   height: 27px;
   font-size: 0.813rem;
-  color: white;
-  background-color: #7E72F2;
+  color: var(--text-active-color);
+  background-color: var(--main-color);
   border-radius: 3px;
   display: flex;
   align-items: center;
@@ -77,17 +83,17 @@ body {
 }
 
 .os-add-button {
-  background-color: #7E72F2;
+  background-color: var(--main-color);
   width: 100%;
   height: 2.5rem;
   font-size: 0.75rem;
   text-transform: uppercase;
   text-align: center;
-  color: white;
- /* display: flex;
-  align-items: flex-end;*/
+  color: var(--text-active-color);
   box-sizing: border-box;
+  cursor: pointer;
 }
 .os-add-button:hover{
-  background-color: #5c4eda;
+  background-color: var(--active-color);
+  transition: all 0.5s ease 0s;
 }
