--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
-
   <style>
     .wrapper {
       margin: 100px auto;
@@ -15,7 +15,22 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <ul class="os-pagination">
+      <li class="os-pagination-back"><i class="bi bi-chevron-left"></i></li>
+      <li class="os-pagination-number active">1</li>
+      <li class="os-pagination-number">2</li>
+      <li class="os-pagination-number">3</li>
+      <li class="os-pagination-number">4</li>
+      <li class="os-pagination-number">5</li>
+      <li class="os-pagination-number">6</li>
+      <li class="os-pagination-number">7</li>
+      <li class="os-pagination-number">8</li>
+      <li class="os-pagination-number">9</li>
+      <li class="os-pagination-number">10</li>
+      <li class="os-pagination-number">11</li>
+      <li class="os-pagination-number">12</li>
+      <li class="os-pagination-forvard"><i class="bi bi-chevron-right"></i></li>
+    </ul>
   </div>
 </main>
 
