--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link href="./styles/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+<div class="main">
+    <img class="my-photo" src="img/photo2.jpg">
+    <div class="rate-price">
+        <div class="rate">
+            <p class="star-text">1.23</p>
+            <svg fill="none" height="12" viewBox="0 0 14 12" width="14" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 0.940965L8.8394 3.87345L8.95364 4.05557L9.16441 4.09795L12.6648 4.80181L10.3013 7.25805L10.1392 7.42652L10.1645 7.65893L10.5264 10.9777L7.18936 9.61224L7 9.53476L6.81064 9.61224L3.47361 10.9777L3.83549 7.65893L3.86083 7.42652L3.69872 7.25805L1.3352 4.80181L4.83559 4.09795L5.04636 4.05557L5.1606 3.87345L7 0.940965Z"
+                      stroke="white"/>
+            </svg>
+        </div>
+        <div>
+            <p class="price">15999</p>
+        </div>
+    </div>
+    <div class="inscription">
+        <p class="inscription-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+        <p class="text-laptop">laptop</p>
+    </div>
+    <div class="add-cart">
+        <p class="text-cart">Add To Cart</p>
+    </div>
+</div>
+
 </body>
 </html>
