store-and-pagination

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+      <meta charset="UTF-8">
+      <title>CV | IlonaShch</title>
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
+      <link rel="stylesheet" href="./style.css">
+    </head>
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+    <body>
 
-</body>
-</html>
+        <div class="pagination">
+          <div class="kolo gray first-end"><div class="kolo-center"><p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+          </svg></p></div></div>
+          <div class="kolo blue"><div class="kolo-center"><p>1</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>2</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>3</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>4</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>5</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>6</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>7</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>8</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>9</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>10</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>11</p></div></div>
+          <div class="kolo gray"><div class="kolo-center"><p>12</p></div></div>
+          <div class="kolo gray first-end"><div class="kolo-center"><p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+          </svg></p></div></div>
+
+        </div>
+    </body>
