--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
@@ -12,11 +13,29 @@
     }
   </style>
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <div class="shop-card-place-1">
+        <div class="shop-image-place-2">
+          <img src="./img/A315-57G-336G.png">
+        </div>
+        <div class="shop-script-place-3">
+          <div class="shop-item-rating">
+            <div>1.23</div>
+            <img src="./img/123-star.png" class="shop-rating-image">
+          </div>
+          <div class="shop-price">19 999</div>
+        </div>
+        <div class="shop-full-discript">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="shop-model-title">laptops</div>
+        <div class="shop-botton-place-4">tap to buy</div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
