--- a/components/card/index.html
+++ b/components/card/index.html
@@ -2,20 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
+  <title>Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class ="laptop_card">
+      <div class="laptop_image">
+    <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="laptop_image">
+      </div>
+      <div class="laptop_rating_and_price">
+      <button class="laptop_rating_button">1.2 <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+          <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+        </svg></button>     
+        <span>15999</span>
+      </div>
+      <div class="laptop_description">
+        Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+      </div>
+      <div class="goods_category">
+        laptop
+      </div>
+      <div class="add_cart_button"></div>
+      <button>ADD TO CART</button>
+    </div>
   </div>
 </main>
 </body>
