--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="style.css" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -16,6 +16,14 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="card">
+      <div class="img">
+        <img class="photo" src="../card/img/laptop.jpg" alt="laptop">
+      </div>
+      <div class="mark-button">
+        <div class="mark">1,23</div>
+      </div>
+    </div>
   </div>
 </main>
 </body>
