card and pagination

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&amp;display=swap">
 
   <style>
     .wrapper {
@@ -16,6 +17,22 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="card">
+      <img class="photo-laptop" src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg">
+      <div class="rating-price">
+        <div class="rating">
+          <span class="rating-laptop">1.23</span>
+          <img class="rating-star" src="./images/star.png">
+        </div>
+        <div>
+          <span class="price-laptop">15999</span>
+        </div>
+      </div>
+      <h5 class="title-laptop">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+      <p class="category-laptop">laptops</p>
+      <div class="bottom-blok"></div>
+        <button class="add-laptop">ADD TO CART</button>
+      </div>
   </div>
 </main>
 </body>
