--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&amp;display=swap">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <style>
     .wrapper {
       margin: 100px auto;
@@ -12,11 +13,34 @@
   </style>
 </head>
 <body>
-
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+    <div class="pagination-block">
+      <div class="button-back page">
+        <span class="glyphicon glyphicon-menu-left"></span>
+      </div>
+      <div class="distance">
+        <div class="button-1 page">1</div>
+        <div class="button-2 page">2</div>
+        <div class="button-3 page">3</div>
+        <div class="button-4 page">4</div>
+        <div class="button-5 page">5</div>
+        <div class="button-6 page">6</div>
+        <div class="button-7 page">7</div>
+        <div class="button-8 page">8</div>
+        <div class="button-9 page">9</div>
+        <div class="button-10 page">10</div>
+        <div class="button-11 page">11</div>
+        <div class="button-12 page">12</div>
+      </div>
+      <div class="button-forward page">
+        <span class="glyphicon glyphicon-menu-right"></span>
+      </div>
+    </div>
   </div>
+
+
 </main>
 
 </body>
