--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,20 +4,29 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+   <div class="pagination_section"></div>
+   <ul class="pages">
+  <li class="previous_page"><</li> 
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+  <li>6</li>
+  <li>7</li>
+  <li>8</li>
+  <li>9</li>
+  <li>10</li>
+  <li>11</li>
+  <li>12</li>
+  <li class="following_page">></li>  
+  </ul> 
   </div>
 </main>
-
 </body>
 </html>
