--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,20 +4,26 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
+  <main class="wrapper">
+    <div class="previous-page"><i class="bi bi-chevron-left"></i></div>
+    <div class="pagination-items active">1</div>
+    <div class="pagination-items">2</div>
+    <div class="pagination-items">3</div>
+    <div class="pagination-items">4</div>
+    <div class="pagination-items">5</div>
+    <div class="pagination-items">6</div>
+    <div class="pagination-items">7</div>
+    <div class="pagination-items">8</div>
+    <div class="pagination-items">9</div>
+    <div class="pagination-items">10</div>
+    <div class="pagination-items">11</div>
+    <div class="pagination-items">12</div>
+    <div class="next-page"><i class="bi bi-chevron-right"></i></div>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
