--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -7,7 +7,7 @@
 
   <style>
     .wrapper {
-      margin: 100px auto;
+
     }
   </style>
 </head>
@@ -15,7 +15,21 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="box prevous-page"><</div>
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+    <div class="box">6</div>
+    <div class="box">7</div>
+    <div class="box">8</div>
+    <div class="box">9</div>
+    <div class="box">10</div>
+    <div class="box">11</div>
+    <div class="box">12</div>
+    <div class="box next-page">></div>
+
   </div>
 </main>
 
