--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
   <style>
     .wrapper {
@@ -15,7 +18,32 @@
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="previous-page">
+        <a href="" class="pagination">
+          <i class="bi bi-chevron-left"></i>
+        </a>
+    </div>
+    <div class="pages">
+      <ul class="pages-list">
+        <li class="pagination">1</li>
+        <li class="pagination">2</li>
+        <li class="pagination">3</li>
+        <li class="pagination">4</li>
+        <li class="pagination">5</li>
+        <li class="pagination">6</li>
+        <li class="pagination">7</li>
+        <li class="pagination">8</li>
+        <li class="pagination">9</li>
+        <li class="pagination">10</li>
+        <li class="pagination">11</li>
+        <li class="pagination">12</li>
+      </ul>
+    </div>
+    <div class="next-page">
+        <a href="" class="pagination">
+          <i class="bi bi-chevron-right"></i>
+        </a>
+    </div>
   </div>
 </main>
 
