--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,6 +5,7 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
@@ -18,19 +19,18 @@
   <div class="wrapper">
    <div class="card-component-box">
       <div class="card-content">
-        <div>
-          <img src="https://content2.rozetka.com.ua/goods/images/big/163399632.jpg" alt="Product image" class="card-product-image">
+        <div class="card-product-image">
+          <img src="https://content2.rozetka.com.ua/goods/images/big/163399632.jpg" alt="Product image" class="product-image">
         </div>
         <div class="content-details">
-          <div class="card-rating card-purple-elements">
-            <span class="rating">2.55</span>
-            <span class="bi">
-              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-                <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-              </svg>
-            </span>
+          <div class="product-price-reating-wrapper">
+            <div class="card-rating card-purple-elements">
+              <span>2.55</span>
+              <i class="bi bi-star"></i>
+            </div>
+            <div class="card-product-price">15999</div>
           </div>
-          <div class="card-product-price">15999</div>
+
           <div class="card-product-name">
           <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
           </div>
