--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -20,4 +21,5 @@
 </main>
 
 </body>
+<script src="scripts.js" type="text/javascript"></script>
 </html>
