updated card & pagination

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>HTML/CSS Card component</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
@@ -20,11 +23,11 @@
             <div class="os-product-wrapper">
               <div class="rating">
                 <span class="number">2.89</span>
-                <img class="bi bistar" src="./img/Star 2 (Stroke).png" alt=""> </i>
+                <img class="bistar" src="./img/Star 2 (Stroke).png" alt=""> </i>
               </div>
               <div class="product-price">7000</div>
             </div>
-            <h5 class="title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+            <h3 class="title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h3>
             <p class="description">laptops</p>
           </div>
           <footer class="footer">
