--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -5,31 +5,30 @@
 }
 
 .pagination {
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.bi {
-  margin: 12px;
-  background-color: #ededed;
-  border-radius: 50%;
+.bi-chevron-left,
+.bi-chevron-right {
+  margin: 0px 12px;
 }
-
-.number {
-  align-items: center;
+.number,
+.bi {
   width: 40px;
   height: 40px;
   background-color: #ededed;
   border-radius: 50%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .number:hover,
 .active {
   background-color: #7e72f2;
   color: white;
-
 }
 .bi:hover {
   background-color: #7e72f2;
