--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,12 +1,15 @@
+
+
 body {
   background-color: whitesmoke;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper {
   width: 350px;
   margin: 100px auto;
   border-radius: 8px;
-  background-color: rgb(225, 235, 231);
+  background-color: rgb(237, 222, 245);
 }
 
 .box {
@@ -28,8 +31,8 @@ body {
   justify-content: center;
   margin: 12px 12px 0;
 }
+
 .os-product {
-  margin-bottom: 16px;
   padding: 22px 24px;
   box-sizing: border-box;
 }
@@ -55,16 +58,17 @@ body {
 .number {
   margin-left: 8px;
 }
-.bi {
+
+.bistar {
   margin: 8px;
 }
 
 .product-price {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+
 }
 
 .title {
-  font-size: 1rem;
   margin: 0px 0px 7px 0px;
   box-sizing: border-box;
 }
@@ -74,11 +78,13 @@ body {
 }
 
 .footer {
-  display: grid;
+  display: flex;
+  justify-content: center;
   height: 40px;
-  border-radius: 0px 0px 8px 8px;
+  border-radius: 0px 0px 6px 6px;
   background: #7e72f2;
 }
+
 .button {
   margin: 10px;
   color: #fff;
