--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -5,10 +5,8 @@
     <title>HTML/CSS Pagination component</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
   </head>
   <body>
@@ -16,21 +14,7 @@
       <div class="wrapper">
         <!-- Pagination component -->
         <div class="pagination">
-          <i class="bi bi-chevron-left">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-chevron-left"
-              viewBox="0 0 16 16"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
-              />
-            </svg>
-          </i>
+          <i class="bi bi-chevron-left"> </i>
           <div class="number active">1</div>
           <div class="number">2</div>
           <div class="number">3</div>
@@ -40,21 +24,7 @@
           <div class="number">7</div>
           <div class="number">8</div>
           <div class="number">9</div>
-          <i class="bi bi-chevron-right">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-chevron-right"
-              viewBox="0 0 16 16"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
-              />
-            </svg>
-          </i>
+          <i class="bi bi-chevron-right"> </i>
         </div>
       </div>
     </main>
