--- a/components/styles/blocks/product-card.scss
+++ b/components/styles/blocks/product-card.scss
@@ -7,6 +7,7 @@
   background: #fff;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 5px;
+  margin-bottom: 50px;
 
   &__image {
     display: block;
