change div to list

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -16,30 +16,30 @@
   <main>
     <div class="wraper">
       <!-- Pagination component -->
-      <div class="pagination">
-        <div class="pag_page">
+      <ul class="pagination_list">
+        <li class="pag_page">
           <a href="#prev" class="pag_link">
             <i class="bi bi-chevron-left"></i>
           </a>
-        </div>
-        <div class="pag_page"><a href="#1" class="pag_link">1</a></div>
-        <div class="pag_page"><a href="#2" class="pag_link">2</a></div>
-        <div class="pag_page"><a href="#3" class="pag_link">3</a></div>
-        <div class="pag_page"><a href="#4" class="pag_link">4</a></div>
-        <div class="pag_page"><a href="#5" class="pag_link">5</a></div>
-        <div class="pag_page"><a href="#6" class="pag_link">6</a></div>
-        <div class="pag_page"><a href="#7" class="pag_link">7</a></div>
-        <div class="pag_page"><a href="#8" class="pag_link">8</a></div>
-        <div class="pag_page"><a href="#9" class="pag_link">9</a></div>
-        <div class="pag_page"><a href="#10" class="pag_link">10</a></div>
-        <div class="pag_page"><a href="#11" class="pag_link">11</a></div>
-        <div class="pag_page"><a href="#12" class="pag_link">12</a></div>
-        <div class="pag_page">
+        </li>
+        <li class="pag_page"><a href="#" class="pag_link">1</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">2</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">3</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">4</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">5</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">6</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">7</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">8</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">9</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">10</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">11</a></li>
+        <li class="pag_page"><a href="#" class="pag_link">12</a></li>
+        <li class="pag_page">
           <a href="#prev" class="pag_link">
             <i class="bi bi-chevron-right"></i>
           </a>
-        </div>
-      </div>
+        </li>
+      </ul>
   </main>
 
 </body>
