--- a/components/styles/main.css
+++ b/components/styles/main.css
@@ -21,6 +21,7 @@
   -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
           box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 5px;
+  margin-bottom: 50px;
 }
 
 .product-card__image {
