--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -3,12 +3,14 @@
   justify-content: center;
 }
 
-.pagination {
+.pagination_list {
   display: flex;
   justify-content: center;
   margin: 15px auto;
   font-family: 'Montserrat', sans-serif;
-  color: #2c2c2c
+  color: #2c2c2c;
+  list-style-type: none;
+
 }
 
 .pag_page:first-child {
