--- a/components/pagination/pagination.html
+++ b/components/pagination/pagination.html
@@ -10,20 +10,22 @@
   <body>
     <footer>
       <div class="pagination">
-        <button class="btn-switch left-switch">&lt;</button>
-        <button class="btn-switch">1</button>
-        <button class="btn-switch">2</button>
-        <button class="btn-switch">3</button>
-        <button class="btn-switch">4</button>
-        <button class="btn-switch">5</button>
-        <button class="btn-switch">6</button>
-        <button class="btn-switch">7</button>
-        <button class="btn-switch">8</button>
-        <button class="btn-switch">9</button>
-        <button class="btn-switch">10</button>
-        <button class="btn-switch">11</button>
-        <button class="btn-switch">12</button>
-        <button class="btn-switch right-switch">&gt;</button>
+        <ul>
+        <li class="link-switch left-switch">&lt;</li>
+        <li class="link-switch"><a href="#">1</a></li>
+        <li class="link-switch"><a href="#">2</a></li>
+        <li class="link-switch"><a href="#">3</a></li>
+        <li class="link-switch"><a href="#">4</a></li>
+        <li class="link-switch"><a href="#">5</a></li>
+        <li class="link-switch"><a href="#">6</a></li>
+        <li class="link-switch"><a href="#">7</a></li>
+        <li class="link-switch"><a href="#">8</a></li>
+        <li class="link-switch"><a href="#">9</a></li>
+        <li class="link-switch"><a href="#">10</a></li>
+        <li class="link-switch"><a href="#">11</a></li>
+        <li class="link-switch"><a href="#">12</a></li>
+        <li class="link-switch right-switch">&gt;</li>
+      </ul>
       </div>
     </footer>
   </body>
