fix left and right button

--- a/components/pagination/pagination.html
+++ b/components/pagination/pagination.html
@@ -11,7 +11,7 @@
     <footer>
       <div class="pagination">
         <ul>
-        <li class="link-switch left-switch">&lt;</li>
+        <li class="link-switch left-switch"><a href="#">&lt;</a></li>
         <li class="link-switch"><a href="#">1</a></li>
         <li class="link-switch"><a href="#">2</a></li>
         <li class="link-switch"><a href="#">3</a></li>
@@ -24,7 +24,7 @@
         <li class="link-switch"><a href="#">10</a></li>
         <li class="link-switch"><a href="#">11</a></li>
         <li class="link-switch"><a href="#">12</a></li>
-        <li class="link-switch right-switch">&gt;</li>
+        <li class="link-switch right-switch"><a href="#">&gt;</a></li>
       </ul>
       </div>
     </footer>
