add vars for colors

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="pag_page"><a href="#" class="pag_link">1</a></li>
-        <li class="pag_page"><a href="#" class="pag_link">2</a></li>
+        <li class="pag_page"><a href="#" class="pag_link active">2</a></li>
         <li class="pag_page"><a href="#" class="pag_link">3</a></li>
         <li class="pag_page"><a href="#" class="pag_link">4</a></li>
         <li class="pag_page"><a href="#" class="pag_link">5</a></li>
